<resources>
    <string name="app_name">StepWords</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="falloDeArchivo">ARCHIVO_FALLO</string>
    <string name="ErrorConfig">Mal uso de check box</string>
    <string name="guardarAprobado">Guardado con exito</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Mostrar nombre</string>
    <string name="pref_default_display_name">Alexande Rodriguez</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_token_key">
        <item>Verbos 1</item>
        <item>Verbos comunes</item>
        <item>Adjetivos</item>
    </string-array>

    <string-array name="pref_token_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_velrep_aud_key">
        <item>Normal</item>
        <item>Medium</item>
        <item>Lento</item>
        <item>Muy lento</item>
    </string-array>
    <string-array name="pref_velrep_aud_value">
        <item>100</item>
        <item>70</item>
        <item>50</item>
        <item>25</item>
    </string-array>
    <string-array name="pref_time_key">
        <item>1 hora</item>
        <item>5 horas(recomend)</item>
        <item>12 horas</item>
    </string-array>
    <string-array name="pref_time_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_time_toast_key">
        <item>15 sec</item>
        <item>30 sec (recomend)</item>
        <item>1 min</item>
        <item>2 min</item>
    </string-array>
    <string-array name="pref_time_toast_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="bool_1">bool_1</string>
    <string name="seek_1">seek_1</string>
    <string name="aviso_microfono">Requiere conexion a internet</string>
    <string name="crea_tu_stepword">Crea tu StepWord</string>
    <string name="instrucciones_agregar">Palabras cortas, para recordar\nEjemplos:\n\t-Nemotecnicos.\n\t-Formulas.\n\t-Notas.</string>
    <string name="agradecimiento">GRACIAS POR USAR STEPWORD.\nrecuerda que la publicidad mantiene a aplicacion gratuita</string>
    <string name="ir">Ir a por ello</string>
    <string name="primary">DEFAULT PRIMARY</string>
    <string name="masOportunidadesDescripcion">¿TIENES WI-FI?\nPuedes aprovechar el uso de wi-fi y acumular publicidad vista para usarlas mas tarde</string>
    <string name="advertencia">Advertencia</string>
    <string name="mensajeDeCargaDeAnuncio">Cargando anuncio</string>
    <string name="mensajeAnuncioNoDisponible">No hay anuncio disponible</string>
    <string name="irregular_verbs">Verbos 1</string>
    <string name="comon_verbs">Verbos Comunes</string>
    <string name="adjetives">Adjetives</string>
    <string name="p">prueba</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ant"><![CDATA[<]]></string>
    <string name="sig"><![CDATA[>]]></string>
    <string name="TitleStepWord">CREA TU PROPIO STEP WORD</string>
    <string name="predeterminado">Predeterminado</string>
    <string name="my_stepword">Mi StepWord</string>
    <string name="f3_title">Predeterminado para aprender ingles</string>



    <string name="banerID">ca-app-pub-7112272416908253/3794583317</string>
    <string name="intesrticialID">ca-app-pub-7112272416908253/4026092578</string>
    <string name="intesrticial2ID">ca-app-pub-7112272416908253/7459784551</string>

    <string name="pruebaBanerID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="pruebaIntesrticialID">ca-app-pub-3940256099942544/1033173712</string>
</resources>