<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FragmentTres">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/f3_title"
                android:textSize="40sp"

                />

            <RadioGroup
                android:id="@+id/radioGrup"
                style="@style/Theme.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/rbPredefinido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/predeterminado"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbMyWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/my_stepword"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/rbInToast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Mostrar En Toast"
                    android:textSize="20dp" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</LinearLayout>